add color scss and navbar created

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,1 +1,7 @@
 @import "../libs/bootstrap/scss/bootstrap.scss";
+.color-body{
+    background-color: $blue-800;
+}
+.color-navbar{
+    background-color: $yellow-600;
+}
