--- a/css/styles.css
+++ b/css/styles.css
@@ -99,9 +99,6 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.color-body{
-  background-color: var(--bs-secondary);
-}
 
 hr {
   margin: 1rem 0;
@@ -4129,8 +4126,6 @@ textarea.form-control-lg {
 }
 
 .navbar {
-  width: 200px;
-  height: 100vh;
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
   --bs-navbar-color: rgba(0, 0, 0, 0.55);
@@ -4151,6 +4146,9 @@ textarea.form-control-lg {
   --bs-navbar-toggler-border-radius: 0.375rem;
   --bs-navbar-toggler-focus-width: 0.25rem;
   --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
+  width: 10%;
+  height: 100vh;
+  align-items: flex-start;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4172,6 +4170,7 @@ textarea.form-control-lg {
 .navbar > .container-lg,
 .navbar > .container-xl,
 .navbar > .container-xxl {
+  align-items: flex-start;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4184,14 +4183,11 @@ textarea.form-control-lg {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
 .navbar-brand {
-  margin-left: .5rem;
-  font-size: 1.5em;
-  font-weight: bold;
   padding-top: var(--bs-navbar-brand-padding-y);
   padding-bottom: var(--bs-navbar-brand-padding-y);
   margin-right: var(--bs-navbar-brand-margin-end);
+  font-size: var(--bs-navbar-brand-font-size);
   color: var(--bs-navbar-brand-color);
   text-decoration: none;
   white-space: nowrap;
@@ -12145,4 +12141,28 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+/*#add own styles of css from bosstrap */
+.color-body {
+  background-color: #052c65;
+}
+
+.color-navbar {
+  background-color: #cc9a06;
 }/*# sourceMappingURL=styles.css.map */
+
+#logo{
+  background-color: #000;
+  margin-top: 1%;
+  margin-bottom: 150%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  
+}
