brand Argprograma and social bar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -12165,4 +12165,11 @@ textarea.form-control-lg {
   -webkit-box-pack: center;
   justify-content: center;
   
+  
 }
+#argprograma{
+  height: 30%;
+  width: 30%;
+  
+}
+
