--- a/css/styles.css
+++ b/css/styles.css
@@ -12172,6 +12172,7 @@ textarea.form-control-lg {
   top: 200px;
   padding: var(--bs-card-img-overlay-padding);
   border-radius: var(--bs-card-inner-border-radius);
+  margin-right: 50px;
 }
 
 .generalfont{
@@ -12181,3 +12182,37 @@ textarea.form-control-lg {
 .socialicons{
   color: var(--bs-gray-100);
 }
+
+#canvas{
+  position: absolute;
+  right: 800px;
+  top: 400px;
+  background-color: #000;
+}
+
+#img-cevam{
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid var(--bs-border-color);
+  border-radius: 0.375rem;
+  max-width: 100%;
+  height: 95%;
+}
+.img-mukumi{
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid var(--bs-border-color);
+  border-radius: 0.375rem;
+  max-width: 100%;
+  height: 53%;
+}
+#img-fiuba{
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid var(--bs-border-color);
+  border-radius: 0.375rem;
+  max-width: 100%;
+  height: 95%;
+  width: 105%;
+}
+
