--- a/css/styles.css
+++ b/css/styles.css
@@ -602,6 +602,7 @@ progress {
 .img-fluid {
   max-width: 100%;
   height: auto;
+
 }
 
 .img-thumbnail {
@@ -4249,12 +4250,15 @@ textarea.form-control-lg {
   padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
   font-size: var(--bs-navbar-toggler-font-size);
   line-height: 1;
-  color: var(--bs-navbar-color);
+  color:rgba(0, 0, 0, 0.9);
   background-color: transparent;
   border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
   border-radius: var(--bs-navbar-toggler-border-radius);
   -webkit-transition: var(--bs-navbar-toggler-transition);
   transition: var(--bs-navbar-toggler-transition);
+  margin-left: 50px;
+  margin-top: 20px;
+
 }
 @media (prefers-reduced-motion: reduce) {
   .navbar-toggler {
@@ -4803,7 +4807,8 @@ textarea.form-control-lg {
 
 .card-img-overlay {
   position: absolute;
-  left: 170px;
+  left: 220px;
+  margin-top: 40px;
   padding: var(--bs-card-img-overlay-padding);
   border-radius: var(--bs-card-inner-border-radius);
 }
@@ -12149,70 +12154,47 @@ textarea.form-control-lg {
   background-color: #cc9a06;
 }/*# sourceMappingURL=styles.css.map */
 
-#logo{
-  background-color: #000;
-  margin-top: 1%;
-  margin-bottom: 150%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  
-  
-}
 
 #section{
   position: absolute;
-  left: 200px;
   top: 200px;
   padding: var(--bs-card-img-overlay-padding);
   border-radius: var(--bs-card-inner-border-radius);
-  margin-right: 50px;
+  margin-left: 250px;
 }
 
 .generalfont{
   font-family: sans-serif;
+  margin-bottom: 30px;
   color:var(--bs-gray-100);
 }
 .socialicons{
-  color: var(--bs-gray-100);
+  color:#000;
+  margin-left: 20px;
 }
 
-#canvas{
-  position: absolute;
-  right: 800px;
-  top: 400px;
-  background-color: #000;
+#myname{
+  font-size: large;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  color: #000;
+  margin-bottom: 130px;
+  text-align: center;
+
 }
 
-#img-cevam{
-  padding: 0.25rem;
-  background-color: #fff;
-  border: 1px solid var(--bs-border-color);
-  border-radius: 0.375rem;
-  max-width: 100%;
-  height: 95%;
+li > a{
+  font-size: size;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  color: #000;
+  text-align: center;
+
 }
-.img-mukumi{
-  padding: 0.25rem;
-  background-color: #fff;
-  border: 1px solid var(--bs-border-color);
-  border-radius: 0.375rem;
-  max-width: 100%;
-  height: 53%;
-}
-#img-fiuba{
-  padding: 0.25rem;
-  background-color: #fff;
-  border: 1px solid var(--bs-border-color);
-  border-radius: 0.375rem;
-  max-width: 100%;
-  height: 95%;
-  width: 105%;
+
+article > p{
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  color:var(--bs-gray-100);
+  text-align: left;
+
 }
 
