last update until use Typescript

--- a/css/styles.css
+++ b/css/styles.css
@@ -2254,9 +2254,10 @@ progress {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
+  margin-bottom: 5px;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 2;
   color: #212529;
   background-color: #fff;
   background-clip: padding-box;
@@ -2265,6 +2266,7 @@ progress {
      -moz-appearance: none;
           appearance: none;
   border-radius: 0.375rem;
+  border-color: #000;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -12213,4 +12215,8 @@ article > ul > li{
   text-align: center;
   
 }
+#btn-save:hover{
+  background-color: #000;
+  border-color: white !important;
 
+}
