--- a/ownstyles.css
+++ b/ownstyles.css
@@ -17,7 +17,7 @@
     margin: 15px;
 }
 
-#text-aboutme{
+.text-aboutme{
     font-family: sans-serif;
     color: var(--bs-gray-100);
     text-align: justify;
@@ -77,7 +77,7 @@
     border-color: #000;
     margin: 15px 15px;
     }
-    #text-aboutme{
+    .text-aboutme{
     font-family: sans-serif;
     color: var(--bs-gray-100);
     text-align: justify;
@@ -85,7 +85,7 @@
     }
     #icon-edit{
     color: var(--bs-gray-100);
-    margin-right: 200px;
+    margin-right: 350px;
     }
 }
 
